--- a/LockSafe/MainWindow.xaml
+++ b/LockSafe/MainWindow.xaml
@@ -1,12 +1,93 @@
-﻿<Window x:Class="LockSafe.MainWindow"
+﻿<Window x:Name="WinMain" x:Class="LockSafe.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LockSafe"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
+        WindowStyle="None"
+        AllowsTransparency="True"
+        Background="Transparent"
+        Title="Lock Safe" Height="577" Width="951" WindowStartupLocation="CenterScreen" MinWidth="951" MinHeight="577" ResizeMode="CanResizeWithGrip" MouseLeftButtonDown="WinMain_MouseLeftButtonDown">
+    <Window.Resources>
+        <Style x:Key="FocusVisual1">
+            <Setter Property="Control.Template">
+                <Setter.Value>
+                    <ControlTemplate>
+                        <Rectangle Margin="2" StrokeDashArray="1 2" Stroke="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}" SnapsToDevicePixels="true" StrokeThickness="1"/>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+        <SolidColorBrush x:Key="Button.Static.Border1" Color="#F5F5F5"/>
+        <SolidColorBrush x:Key="Button.MouseOver.Border1" Color="#F5F5F5"/>
+        <SolidColorBrush x:Key="Button.Pressed.Border1" Color="#F5F5F5"/>
+        <SolidColorBrush x:Key="Button.Disabled.Border1" Color="#F5F5F5"/>
+        <SolidColorBrush x:Key="Button.Disabled.Foreground1" Color="#FF838383"/>
+        <Style x:Key="NoHoverButtonStyle" TargetType="{x:Type Button}">
+            <Setter Property="FocusVisualStyle" Value="{StaticResource FocusVisual1}"/>
+            <Setter Property="Background" Value="{StaticResource BackgroundColor}"/>
+            <Setter Property="BorderBrush" Value="{StaticResource Button.Static.Border1}"/>
+            <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}"/>
+            <Setter Property="BorderThickness" Value="1"/>
+            <Setter Property="HorizontalContentAlignment" Value="Center"/>
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
+            <Setter Property="Padding" Value="1"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Border x:Name="border" Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" SnapsToDevicePixels="true">
+                            <ContentPresenter x:Name="contentPresenter" Focusable="False" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" Margin="{TemplateBinding Padding}" RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsDefaulted" Value="true">
+                                <Setter Property="BorderBrush" TargetName="border" Value="{DynamicResource {x:Static SystemColors.HighlightBrushKey}}"/>
+                            </Trigger>
+                            <Trigger Property="IsMouseOver" Value="false">
+                                <Setter Property="BorderBrush" TargetName="border" Value="{StaticResource Button.MouseOver.Border1}"/>
+                            </Trigger>
+                            <Trigger Property="IsPressed" Value="false">
+                                <Setter Property="BorderBrush" TargetName="border" Value="{StaticResource Button.Pressed.Border1}"/>
+                            </Trigger>
+                            <Trigger Property="IsEnabled" Value="false">
+                                <Setter Property="BorderBrush" TargetName="border" Value="{StaticResource Button.Disabled.Border1}"/>
+                                <Setter Property="TextElement.Foreground" TargetName="contentPresenter" Value="{StaticResource Button.Disabled.Foreground1}"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+      
+    </Window.Resources>
+    <Grid Background="{StaticResource BackgroundColor}">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="40*"></ColumnDefinition>
+            <ColumnDefinition Width="60*"></ColumnDefinition>
+        </Grid.ColumnDefinitions>
 
+        <Grid.RowDefinitions>
+            <RowDefinition Height="30"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
+        </Grid.RowDefinitions>
+
+        <Button Style="{DynamicResource NoHoverButtonStyle}" x:Name="BtnExit" Grid.Column="1"  Grid.Row="0" Content="✖"  Background="{StaticResource BackgroundColor}" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,15,15,0" Foreground="{StaticResource SecondaryColor}" Padding="0,0,0,0" UseLayoutRounding="False" FontFamily="Microsoft Sans Serif" FontSize="14" BorderThickness="0,0,0,0" Cursor="Hand" Click="BtnExit_Click">
+        </Button>
+        <Button Style="{DynamicResource NoHoverButtonStyle}" x:Name="BtnMinimize" Grid.Column="1" Grid.Row="0" Content="➖" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,15,74,0" Foreground="{StaticResource SecondaryColor}" Padding="0,0,0,0" UseLayoutRounding="False" FontFamily="Microsoft Sans Serif" FontSize="14" BorderThickness="0,0,0,0" Cursor="Hand" Click="BtnMinimize_Click">
+            <Button.BorderBrush>
+                <ImageBrush/>
+            </Button.BorderBrush>
+            <Button.Background>
+                <ImageBrush/>
+            </Button.Background>
+        </Button>
+        <Button Style="{DynamicResource NoHoverButtonStyle}" x:Name="BtnMaximize" Grid.Column="1"  Grid.Row="0" Content="🗖" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,14,46,0" Foreground="{StaticResource SecondaryColor}" Padding="0,0,0,0" UseLayoutRounding="False" FontFamily="Microsoft Sans Serif" FontSize="14" BorderThickness="0,0,0,0" Cursor="Hand" FontWeight="Bold" Click="BtnMaximize_Click">
+            <Button.BorderBrush>
+                <ImageBrush/>
+            </Button.BorderBrush>
+            <Button.Background>
+                <ImageBrush/>
+            </Button.Background>
+        </Button>
     </Grid>
 </Window>
