--- a/LockSafe/MainWindow.xaml
+++ b/LockSafe/MainWindow.xaml
@@ -58,7 +58,46 @@
                 </Setter.Value>
             </Setter>
         </Style>
-      
+
+        <Style x:Key="CustomToggleButton" TargetType="{x:Type ToggleButton}">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type ToggleButton}">
+                        <Viewbox>
+                            <Border x:Name="Border" CornerRadius="10" Background="#FFFFFFFF" Width="40" Height="20">
+                                <Border.Effect>
+                                    <DropShadowEffect ShadowDepth="0.5" Direction="0" Opacity="0.3" />
+                                </Border.Effect>
+                                <Ellipse x:Name="Ellipse" Fill="#FFFFFFFF" Stretch="Uniform" Margin="2 1 2 1" Stroke="Gray" StrokeThickness="0.2" HorizontalAlignment="Stretch">
+                                    <Ellipse.Effect>
+                                        <DropShadowEffect BlurRadius="10" ShadowDepth="1" Opacity="0.3" Direction="260" />
+                                    </Ellipse.Effect>
+                                </Ellipse>
+                            </Border>
+                        </Viewbox>
+                        <ControlTemplate.Triggers>
+                            <EventTrigger RoutedEvent="Checked">
+                                <BeginStoryboard>
+                                    <Storyboard>
+                                        <ColorAnimation Storyboard.TargetName="Border" Storyboard.TargetProperty="(Border.Background).(SolidColorBrush.Color)" To="#2B6CB0" Duration="0:0:0.1" />
+                                        <ThicknessAnimation Storyboard.TargetName="Ellipse" Storyboard.TargetProperty="Margin" To="20 1 2 1" Duration="0:0:0.1" />
+                                    </Storyboard>
+                                </BeginStoryboard>
+                            </EventTrigger>
+                            <EventTrigger RoutedEvent="Unchecked">
+                                <BeginStoryboard>
+                                    <Storyboard>
+                                        <ColorAnimation Storyboard.TargetName="Border" Storyboard.TargetProperty="(Border.Background).(SolidColorBrush.Color)" To="White" Duration="0:0:0.1" />
+                                        <ThicknessAnimation Storyboard.TargetName="Ellipse" Storyboard.TargetProperty="Margin" To="2 1 2 1" Duration="0:0:0.1" />
+                                    </Storyboard>
+                                </BeginStoryboard>
+                            </EventTrigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
     </Window.Resources>
     <Grid Background="{StaticResource BackgroundColor}">
         <Grid.ColumnDefinitions>
@@ -89,5 +128,200 @@
                 <ImageBrush/>
             </Button.Background>
         </Button>
+
+        <Image Source="pack://application:,,,/Images/LockSafeLogo.png" Grid.Column="0" Grid.Row="1"></Image>
+
+        <Grid Grid.Column="1" Grid.Row="1" VerticalAlignment="Center" Margin="25 0 25 0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"></RowDefinition>
+                <RowDefinition Height="Auto"></RowDefinition>
+                <RowDefinition Height="Auto"></RowDefinition>
+                <RowDefinition Height="Auto"></RowDefinition>
+                <RowDefinition Height="Auto"></RowDefinition>
+                <RowDefinition Height="Auto"></RowDefinition>
+                <RowDefinition Height="Auto"></RowDefinition>
+                <RowDefinition Height="Auto"></RowDefinition>
+                <RowDefinition Height="Auto"></RowDefinition>
+                <RowDefinition Height="Auto"></RowDefinition>
+                <RowDefinition Height="Auto"></RowDefinition>
+                <RowDefinition Height="*"></RowDefinition>
+            </Grid.RowDefinitions>
+            
+            <TextBlock x:Name="TbHeading" Grid.Row="0" Text="Generate Password" FontFamily="Poppins" FontSize="42" HorizontalAlignment="Center" VerticalAlignment="Top" Foreground="{DynamicResource SecondaryColor}" FontWeight="Bold" Margin="0 0 0 15"></TextBlock>
+
+            <Label Grid.Row="1" Content="Password" FontFamily="Poppins" FontSize="12" Foreground="{StaticResource LogoColor}" ></Label>
+            <Border Grid.Row="2" CornerRadius="15" Margin="0 0 0 15" Background="{StaticResource MainColor}">
+                <TextBox x:Name="TxtPassword" 
+             Text="x3HAsncm/ahs#as12dO" 
+             TextAlignment="Center" 
+             Padding="0 5 0 5" 
+             Background="Transparent" 
+             Foreground="{StaticResource FontColor}" 
+             FontFamily="Poppins" 
+             FontSize="16" 
+             BorderThickness="0" 
+             IsReadOnly="True"/>
+            </Border>
+
+
+            <Label Grid.Row="3" Content="Length 4" FontFamily="Poppins" FontSize="12" Foreground="{StaticResource LogoColor}" ></Label>
+            <Border Grid.Row="4" CornerRadius="15" Margin="0 0 0 15" Background="{StaticResource MainColor}">
+                <Grid Margin="30 10 30 10">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="Auto"/>
+                    </Grid.ColumnDefinitions>
+
+                    <TextBlock Text="4" VerticalAlignment="Center" Margin="0 0 10 0" FontFamily="Poppins" FontSize="12" Foreground="{StaticResource LogoColor}"/>
+
+                    <Slider 
+                        Grid.Column="1"
+                        Minimum="4"
+                        Maximum="64"                   
+                        IsSnapToTickEnabled="True"
+                        IsSelectionRangeEnabled="True"
+                        VerticalAlignment="Center"/>
+
+                    <TextBlock Text="64" Grid.Column="2" VerticalAlignment="Center" Margin="10 0 0 0" FontFamily="Poppins" FontSize="12" Foreground="{StaticResource LogoColor}" />
+                </Grid>
+            </Border>
+
+
+            <Label Grid.Row="5" Content="Settings" FontFamily="Poppins" FontSize="12" Foreground="{StaticResource LogoColor}" ></Label>
+            <Border Grid.Row="6" CornerRadius="15" Margin="0 0 0 15" Background="{StaticResource MainColor}">
+
+                <Grid HorizontalAlignment="Stretch" Margin="30 0 30 0">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="50*"></ColumnDefinition>
+                        <ColumnDefinition Width="50*"></ColumnDefinition>
+                    </Grid.ColumnDefinitions>
+
+                    <TextBlock
+                        x:Name="TbSettingNumbers"
+                        Grid.Column="0"
+                        Text="Include Numbers" 
+                        FontFamily="Poppins" 
+                        FontSize="16" 
+                        HorizontalAlignment="Left"
+                        Foreground="{StaticResource FontColor}"
+                        Padding="0 5 0 5">
+
+                    </TextBlock>
+
+                    <ToggleButton 
+                        x:Name="TogBtnSettingNumbers"
+                        Grid.Column="1"
+                        Content="Toggle"  
+                        Width="45"
+                        Margin="20 5 0 5"
+                        HorizontalAlignment="Right"
+                        Style="{StaticResource CustomToggleButton}">
+
+                    </ToggleButton>
+                </Grid>
+            </Border>
+
+            <Border Grid.Row="7" CornerRadius="15" Margin="0 0 0 15" Background="{StaticResource MainColor}">
+
+                <Grid HorizontalAlignment="Stretch" Margin="30 0 30 0">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="50*"></ColumnDefinition>
+                        <ColumnDefinition Width="50*"></ColumnDefinition>
+                    </Grid.ColumnDefinitions>
+                    
+                    <TextBlock
+                        x:Name="TbSettingLetters"
+                        Grid.Column="0"
+                        Text="Include Letters" 
+                        FontFamily="Poppins" 
+                        FontSize="16" 
+                        HorizontalAlignment="Left" 
+                        Foreground="{StaticResource FontColor}"
+                        Padding="0 5 0 5">
+
+                    </TextBlock>
+
+                    <ToggleButton 
+                        x:Name="TogBtnSetting"
+                        Grid.Column="1"
+                        Content="Toggle"  
+                        Width="45"
+                        HorizontalAlignment="Right"
+                        Margin="20 5 0 5"
+                        Style="{StaticResource CustomToggleButton}">
+
+                    </ToggleButton>
+                </Grid>
+            </Border>
+
+            <Border Grid.Row="8" CornerRadius="15" Margin="0 0 0 15" Background="{StaticResource MainColor}">
+
+                <Grid HorizontalAlignment="Stretch" Margin="30 0 30 0">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="50*"></ColumnDefinition>
+                        <ColumnDefinition Width="50*"></ColumnDefinition>
+                    </Grid.ColumnDefinitions>
+
+                    <TextBlock
+                        x:Name="TbSettingUpperCase"
+                        Grid.Column="0"
+                        Text="Include Upper Case Letters" 
+                        FontFamily="Poppins" 
+                        FontSize="16" 
+                        HorizontalAlignment="Left" 
+                        Foreground="{StaticResource FontColor}"
+                        Padding="0 5 0 5">
+
+                    </TextBlock>
+
+                    <ToggleButton 
+                        x:Name="TogBtnUpperCase"
+                        Grid.Column="1"
+                        Content="Toggle"  
+                        Width="45"
+                        HorizontalAlignment="Right"
+                        Margin="20 5 0 5"
+                        Style="{StaticResource CustomToggleButton}">
+
+                    </ToggleButton>
+                </Grid>
+            </Border>
+
+            <Border Grid.Row="9" CornerRadius="15" Margin="0 0 0 15" Background="{StaticResource MainColor}">
+
+                <Grid HorizontalAlignment="Stretch" Margin="30 0 30 0">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="50*"></ColumnDefinition>
+                        <ColumnDefinition Width="50*"></ColumnDefinition>
+                    </Grid.ColumnDefinitions>
+
+                    <TextBlock
+                        x:Name="TbSettingSpecialCharacters"
+                        Grid.Column="0"
+                        Text="Include Special Characters" 
+                        FontFamily="Poppins" 
+                        FontSize="16" 
+                        HorizontalAlignment="Left" 
+                        Foreground="{StaticResource FontColor}"
+                        Padding="0 5 0 5">
+
+                    </TextBlock>
+
+                    <ToggleButton 
+                        x:Name="TogBtnSpecialCharacters"
+                        Grid.Column="1"
+                        Content="Toggle"  
+                        Width="45"
+                        HorizontalAlignment="Right"
+                        Margin="20 5 0 5"
+                        Style="{StaticResource CustomToggleButton}">
+
+                    </ToggleButton>
+                </Grid>
+            </Border>
+
+        </Grid>
+
     </Grid>
 </Window>
