--- a/LockSafe/Views/MainWindow.xaml
+++ b/LockSafe/Views/MainWindow.xaml
@@ -179,25 +179,22 @@
             <RowDefinition Height="*"></RowDefinition>
         </Grid.RowDefinitions>
 
-        <Button Style="{DynamicResource NoHoverButtonStyle}" x:Name="BtnExit" Grid.Column="1"  Grid.Row="0" Content="✖"  Background="{StaticResource BackgroundColor}" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,15,15,0" Foreground="{StaticResource SecondaryColor}" Padding="0,0,0,0" UseLayoutRounding="False" FontFamily="Microsoft Sans Serif" FontSize="14" BorderThickness="0,0,0,0" Cursor="Hand" Click="BtnExit_Click">
+        <Button Style="{DynamicResource NoHoverButtonStyle}" x:Name="BtnExit" Grid.Column="1"  Grid.Row="0" Content="✖"  
+                HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,15,15,0" 
+                Foreground="{StaticResource SecondaryColor}" Padding="0,0,0,0" UseLayoutRounding="False" FontFamily="Microsoft Sans Serif" 
+                FontSize="14" BorderThickness="0,0,0,0" Cursor="Hand" Click="BtnExit_Click">
         </Button>
-        <Button Style="{DynamicResource NoHoverButtonStyle}" x:Name="BtnMinimize" Grid.Column="1" Grid.Row="0" Content="➖" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,15,74,0" Foreground="{StaticResource SecondaryColor}" Padding="0,0,0,0" UseLayoutRounding="False" FontFamily="Microsoft Sans Serif" FontSize="14" BorderThickness="0,0,0,0" Cursor="Hand" Click="BtnMinimize_Click">
-            <Button.BorderBrush>
-                <ImageBrush/>
-            </Button.BorderBrush>
-            <Button.Background>
-                <ImageBrush/>
-            </Button.Background>
+        <Button Style="{DynamicResource NoHoverButtonStyle}" x:Name="BtnMinimize" Grid.Column="1" Grid.Row="0" Content="➖" 
+                HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,15,74,0" Foreground="{StaticResource SecondaryColor}" 
+                Padding="0,0,0,0" UseLayoutRounding="False" FontFamily="Microsoft Sans Serif" FontSize="14" BorderThickness="0,0,0,0" 
+                Cursor="Hand" Click="BtnMinimize_Click">
         </Button>
-        <Button Style="{DynamicResource NoHoverButtonStyle}" x:Name="BtnMaximize" Grid.Column="1"  Grid.Row="0" Content="🗖" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,14,46,0" Foreground="{StaticResource SecondaryColor}" Padding="0,0,0,0" UseLayoutRounding="False" FontFamily="Microsoft Sans Serif" FontSize="14" BorderThickness="0,0,0,0" Cursor="Hand" FontWeight="Bold" Click="BtnMaximize_Click">
-            <Button.BorderBrush>
-                <ImageBrush/>
-            </Button.BorderBrush>
-            <Button.Background>
-                <ImageBrush/>
-            </Button.Background>
+        <Button Style="{DynamicResource NoHoverButtonStyle}" x:Name="BtnMaximize" Grid.Column="1"  Grid.Row="0" Content="🗖" 
+                HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,14,46,0" Foreground="{StaticResource SecondaryColor}" 
+                Padding="0,0,0,0" UseLayoutRounding="False" FontFamily="Microsoft Sans Serif" FontSize="14" BorderThickness="0,0,0,0" 
+                Cursor="Hand" FontWeight="Bold" Click="BtnMaximize_Click">
         </Button>
-
+        
         <Image Source="pack://application:,,,/Images/LockSafeLogo.png" Grid.Column="0" Grid.Row="1"></Image>
 
         <Grid Grid.Column="1" Grid.Row="1" VerticalAlignment="Center" Margin="25 0 25 0">
@@ -220,34 +217,60 @@
 
             <Label Grid.Row="1" Content="Password" FontFamily="Poppins" FontSize="12" Foreground="{StaticResource LogoColor}" ></Label>
             <Border Grid.Row="2" CornerRadius="15" Margin="0 0 0 15" Background="{StaticResource MainColor}">
-                <TextBlock x:Name="TxtPassword" 
-                    TextAlignment="Center" 
-                    Padding="0 5 0 5"
-                    Background="Transparent"
-                    FontFamily="Poppins"
-                    FontSize="18">
-                    <!-- Inlines -> Display text dynamically in several parts (different run elements) -->
-                    <TextBlock.Inlines>
-                        <ItemsControl ItemsSource="{Binding FormattedPassword}">
-                            <ItemsControl.ItemsPanel>
-                                <ItemsPanelTemplate>
-                                    <StackPanel Orientation="Horizontal" />
-                                </ItemsPanelTemplate>
-                            </ItemsControl.ItemsPanel>
-                            <ItemsControl.ItemTemplate>
-                                <DataTemplate>
-                                    <TextBlock>
-                        <!-- Text and foreground of run is binded to the text / foreground of the FormattedPassword collection -->
-                        <Run Text="{Binding Text}" 
-                             Foreground="{Binding Foreground}" 
-                             FontSize="18" 
-                             FontFamily="Poppins" />
-                                    </TextBlock>
-                                </DataTemplate>
-                            </ItemsControl.ItemTemplate>
-                        </ItemsControl>
-                    </TextBlock.Inlines>
-</TextBlock>
+                <Grid Margin="30 0 25 0">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="Auto" />
+                    </Grid.ColumnDefinitions>
+
+                    <TextBlock x:Name="TxtPassword" 
+                        TextAlignment="Left" 
+                        Padding="0 5 0 5"
+                        Margin="0 0 20 0"
+                        Background="Transparent"
+                        FontFamily="Poppins"
+                        FontSize="18"
+                        Grid.Column="0"
+                        TextWrapping="Wrap" >
+                        <!-- Inlines -> Display text dynamically in several parts (different run elements) -->
+                        <TextBlock.Inlines>
+                            <ItemsControl ItemsSource="{Binding FormattedPassword}">
+                                <ItemsControl.ItemsPanel>
+                                    <ItemsPanelTemplate>
+                                        <StackPanel Orientation="Horizontal" />
+                                    </ItemsPanelTemplate>
+                                </ItemsControl.ItemsPanel>
+                                <ItemsControl.ItemTemplate>
+                                    <DataTemplate>
+                                        <TextBlock>
+                                            <!-- Text and foreground of run is binded to the text / foreground of the FormattedPassword collection -->
+                                            <Run Text="{Binding Text}" 
+                                                Foreground="{Binding Foreground}" 
+                                                FontSize="18" 
+                                                FontFamily="Poppins" />
+                                        </TextBlock>
+                                    </DataTemplate>
+                                </ItemsControl.ItemTemplate>
+                            </ItemsControl>
+                        </TextBlock.Inlines>
+                    </TextBlock>
+
+                    <Button Style="{DynamicResource NoHoverButtonStyle}" x:Name="BtnGenerate" Grid.Column="1" Content="🗘" 
+                        HorizontalAlignment="Left" VerticalAlignment="Center" Background="{StaticResource MainColor}"  
+                        Foreground="{StaticResource SecondaryColor}" Margin="0 0 7 0" BorderThickness="0,0,0,0" 
+                        Padding="0,0,0,0" UseLayoutRounding="False" FontFamily="Microsoft Sans Serif" FontSize="24"
+                        Cursor="Hand" FontWeight="Bold" Click="BtnGenerate_Click">
+                    </Button>
+
+                    <Button Style="{DynamicResource NoHoverButtonStyle}" x:Name="BtnCopy" Grid.Column="2" Content="📋" 
+                        HorizontalAlignment="Left" VerticalAlignment="Center" Background="{StaticResource MainColor}"  
+                        Foreground="{StaticResource SecondaryColor}" Margin="0 0 0 0" BorderThickness="0,0,0,0" 
+                        Padding="0,0,0,0" UseLayoutRounding="False" FontFamily="Microsoft Sans Serif" FontSize="17.3"
+                        Cursor="Hand" FontWeight="Bold" Click="BtnCopy_Click">
+                    </Button>
+
+                </Grid>
             </Border>
 
 
@@ -274,14 +297,14 @@
                     <Slider 
                         Grid.Column="1"
                         Minimum="4"
-                        Maximum="42"                   
+                        Maximum="64"                   
                         IsSnapToTickEnabled="True"
                         IsSelectionRangeEnabled="True"
                         VerticalAlignment="Center"
                         Style="{StaticResource AppSliderStyle}"
                         Value="{Binding PasswordLength}"/>
 
-                    <TextBlock Text="42" Grid.Column="2" VerticalAlignment="Center" Margin="10 0 0 0" FontFamily="Poppins" FontSize="12" Foreground="{StaticResource LogoColor}" />
+                    <TextBlock Text="64" Grid.Column="2" VerticalAlignment="Center" Margin="10 0 0 0" FontFamily="Poppins" FontSize="12" Foreground="{StaticResource LogoColor}" />
                 </Grid>
             </Border>
 
