--- a/LockSafe/Views/MainWindow.xaml
+++ b/LockSafe/Views/MainWindow.xaml
@@ -240,8 +240,20 @@
 
                 <TextBlock x:Name="TbHeading" Grid.Row="0" Text="Generate Password" FontFamily="Poppins" FontSize="42" HorizontalAlignment="Center" VerticalAlignment="Top" Foreground="{DynamicResource SecondaryColor}" FontWeight="Bold" Margin="0 0 0 15"></TextBlock>
 
-                <Label Grid.Row="1" Content="Password" FontFamily="Poppins" FontSize="12" Foreground="{StaticResource LogoColor}" ></Label>
-                <Border Grid.Row="2" CornerRadius="15" Margin="0 0 0 15" Background="{StaticResource MainColor}">
+                <Grid Grid.Row="1">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+                    <Label Grid.Column="0" HorizontalAlignment="Left" Content="Password" FontFamily="Poppins" FontSize="12" Foreground="{StaticResource LogoColor}" ></Label>
+
+                    <StackPanel Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Right">
+                        <Label HorizontalAlignment="Right" Content="Time to crack:" FontFamily="Poppins" FontSize="12" Foreground="{StaticResource LogoColor}" ></Label>
+                        <Label x:Name="LblCrackTime" HorizontalAlignment="Right" Margin="0 0 3 0" Content="{Binding CrackTimeText}" FontFamily="Poppins" FontSize="12" FontWeight="Bold" Foreground="{StaticResource LogoColor}" ></Label>
+                    </StackPanel>
+                </Grid>
+                <!-- Grid mit 2 Column für row1 links password text rechts zeit zum knacken und sicherheit hoch/mittel/schwach englisch chatgpt für algorithmus. farbe daruntter green orange red -->
+                <Border Grid.Row="2" CornerRadius="15" BorderBrush="{Binding PasswordStrengthColor}" BorderThickness="0 0 0 4" Margin="0 0 0 15" Background="{StaticResource MainColor}">
                     <Grid Margin="30 0 25 0">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*" />
@@ -250,15 +262,15 @@
                         </Grid.ColumnDefinitions>
 
                         <RichTextBox x:Name="RTbPassword" 
-                    IsReadOnly="True" 
-                    Padding="0 5 0 5"
-                    Margin="0 0 20 0"
-                    Background="Transparent"
-                    BorderThickness="0"
-                    FontFamily="Poppins"
-                    FontSize="18"                                
-                    VerticalScrollBarVisibility="Hidden"
-                    HorizontalScrollBarVisibility="Hidden" >
+                            IsReadOnly="True" 
+                            Padding="0 5 0 5"
+                            Margin="0 0 20 0"
+                            BorderThickness="0"
+                            Background="Transparent"
+                            FontFamily="Poppins"
+                            FontSize="18"                                
+                            VerticalScrollBarVisibility="Hidden"
+                            HorizontalScrollBarVisibility="Hidden" >
                             <FlowDocument >
                                 <Paragraph>
                                     <InlineUIContainer>
