--- a/LockSafe/Views/MainWindow.xaml
+++ b/LockSafe/Views/MainWindow.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LockSafe"
         mc:Ignorable="d"
+        Icon="../Images/LockSafeLogo.png"
         WindowStyle="None"
         AllowsTransparency="True"
         Background="Transparent"
